# rocagents

./: .env.example  .gitignore  README.md  agent_install.sh  db.json  hermes  hermes_install.sh  install-fast.sh  install.sh  metadata.json  nous_agent.sh  package-lock.json  package.json  patch-roc-agentsroute.sh  proot_install.sh  review_loop_contoh.py  server.ts  termux-create-new-codespace.sh  termux-login-codespace.sh  termux-open-codespace-localhost.sh  test-roadqwen-tools.ts  tsconfig.json  vite.config.ts
rocd/: CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  rocd  rocd.py  setup-oci-apt-mirror.sh  setup-ubuntu-full.sh
rocd/rocd_mod/: __init__.py  arch.py  cli.py  constants.py  l2s.py  locking.py  message.py  names.py  parser.py  paths.py  progress.py  session.py  sysdata.py
rocd/rocd_mod/commands/: __init__.py  backup.py  build.py  clear_cache.py  copy.py  install.py  install_local.py  kill.py  list.py  ps.py  push.py  remove.py  rename.py  reset.py  restore.py  run.py  sync.py
rocd/rocd_mod/completions/: _proot-distro  proot-distro.bash  proot-distro.fish
rocd/rocd_mod/helpers/: build_cache.py  download.py  layer_diff.py  oci_writer.py  rootfs.py  tar_extract.py
rocd/tests/: README.md  _builders.py  conftest.py
rocd/tests/integration/: test_backup_restore_roundtrip.py  test_build_end_to_end.py  test_clear_cache_and_list.py  test_cli_dispatch.py  test_copy_sync.py  test_install_local_oci.py  test_install_local_tar.py  test_login_get_proot_cmd.py  test_pull_offline.py  test_remove_rename_reset.py
rocd/tests/live/: test_live_proot.py  (+1 more)
(+127 files in other folders)
